[gd_scene load_steps=2 format=3 uid="uid://defdeav8rli6o"]

[ext_resource type="Script" path="res://addons/dialogic/Editor/TimelineEditor/TextEditor/timeline_editor_text.gd" id="1_1kbx2"]

[node name="TimelineTextEditor" type="CodeEdit"]
offset_top = 592.0
offset_right = 1024.0
offset_bottom = 600.0
theme_override_constants/line_spacing = 10
wrap_mode = 1
minimap_draw = true
caret_blink = true
highlight_current_line = true
draw_tabs = true
line_folding = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
code_completion_prefixes = Array[String](["[", "{"])
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_1kbx2")

[node name="UpdateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="code_completion_requested" from="." to="." method="_on_code_completion_requested"]
[connection signal="symbol_lookup" from="." to="." method="_on_symbol_lookup"]
[connection signal="symbol_validate" from="." to="." method="_on_symbol_validate"]
[connection signal="text_changed" from="." to="." method="_on_text_editor_text_changed"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_update_timer_timeout"]
